Atualizando o index e css

--- a/index.html
+++ b/index.html
@@ -19,5 +19,22 @@
            </NAV>
         </div>
     </header>
+
+    <main>
+<div class ="filme-principal"> 
+    <div class="container">
+<h3 class= "Titulo"> RAMBO: ATÉ O FIM</h3>
+<p class= "descricao">O tempo passou para Rambo, agora ele vive recluso e trabalha em um rancho que fica na fronteira entre os Estados Unidos e o México.</P>
+    <div class= "botoes">
+        <button role="button" class="botao">
+            ASSISTIR AGORA
+        </button>
+        <button role ="button"class="botao">
+            MAIS INFORMAÇÕES
+        </button>
+    </div>
+    </div>
+</div>
+    </main>
 </body>
 </html>
