--- a/index.html
+++ b/index.html
@@ -23,18 +23,22 @@
     <main>
 <div class ="filme-principal"> 
     <div class="container">
-<h3 class= "Titulo"> RAMBO: ATÉ O FIM</h3>
+<h3 class= "titulo"> RAMBO: ATÉ O FIM</h3>
 <p class= "descricao">O tempo passou para Rambo, agora ele vive recluso e trabalha em um rancho que fica na fronteira entre os Estados Unidos e o México.</P>
     <div class= "botoes">
         <button role="button" class="botao">
+            <i class="fas fa-play"></i>
             ASSISTIR AGORA
         </button>
         <button role ="button"class="botao">
+            <i class="fas fa-info-circle"></i>
             MAIS INFORMAÇÕES
         </button>
     </div>
     </div>
 </div>
     </main>
+
+    <script src="https://kit.fontawesome.com/92fd2d944b.js" crossorigin="anonymous"></script>
 </body>
 </html>
