--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 <p class="descricao">O tempo passou para Rambo, agora ele vive recluso e trabalha em um rancho que fica
                     na fronteira entre os Estados Unidos e o México.</P>
                 <div class="botoes">
-                    <button role="button" class="botao">
+                    <a href="https://youtu.be/bk4E0Rl2cns"><button role="button" class="botao">
                         <i class="fas fa-play"></i>
-                        ASSISTIR AGORA
-                    </button>
+                       ASSISTIR AGORA
+                    </button></a>
                     <button role="button" class="botao">
                         <i class="fas fa-info-circle"></i>
                         MAIS INFORMAÇÕES
@@ -225,10 +225,14 @@
 
     </div>
 
+    <footer>
+        <p>Autor: Vanessa Mayara<br>
+       <a href="https://github.com/vanedev"><button>Git Hub</button></a></p>
+      </footer>
+
     <script src="https://kit.fontawesome.com/92fd2d944b.js" crossorigin="anonymous"></script>
     <script src="JS/owl/jquery.min.js"></script>
     <script src="JS/owl/owl.carousel.min.js"></script>
-
     <script src="JS/owl/setup.js"></script>
 
 </body>
